# qiskit-template

./: .devenv.flake.nix  .gitignore  LICENSE  README.md  bell.ipynb  devenv.nix  pyproject.toml
.devenv/: input-paths.txt  load-exports  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link  shell-2-link
